crates/test-ui/ui/msg_send_id_no_return_type.stderr
error[E0282]: type annotations needed
 --> ui/msg_send_id_no_return_type.rs
  |
  |     unsafe { msg_send_id![NSObject::class(), new] };
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type
  |
  = note: this error originates in the macro `msg_send_id` (in Nightly builds, run with -Z macro-backtrace for more info)
